--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,7 +6,7 @@ body{
 
     body::before{
         content:"";
-        background-image: url(../flamengo/flamengo-back123.jpg);
+        background-image: url(../imagens/flamengo-back123.jpg);
         background-repeat: no-repeat;
         background-size: cover;
         background-position: center;
@@ -56,6 +56,11 @@ body{
         width: 100%;
         text-align: center;
     }
+
+    .lista-de-personagens .personagem {
+        border-bottom: 4px solid #ff2d2d;
+    }
+
     .lista-de-personagens .personagem
     img{
         width: 100%;
